# MyBook

./: .dockerignore  .env  .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  generate_chapters.sql  generate_novel.py  insert_chapters.sql  run_tests.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  run.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2026_04_04_0001_add_comment_signal_candidate.py  2026_04_12_0001_v2_7_reader_experience.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  exceptions.py
backend/app/db/: session.py
backend/app/llm/: __init__.py  base.py  factory.py  mock.py
backend/app/models/: __init__.py  arc_envelope.py  band_experience_plan.py  chapter.py  chapter_memory.py  chapter_rewrite_attempt.py  character.py  character_state.py  comment.py  foreshadow_record.py  project.py  publish_task.py  review_note.py  story_bible.py  volume.py  world_setting.py
backend/app/repositories/: base.py  chapter.py  (+1 more)
backend/migrations/: phase_a_comment_signal_candidate.sql
backend/tests/: conftest.py  test_api.py  test_api_v2_7.py  test_arc_envelope.py  test_audience_phase_b.py  test_canon_guard.py  test_llm.py  test_llm_full.py  test_memory.py  test_memory_full.py  test_migration_v2_7.py  test_models.py  test_planner.py  test_planner_full.py  test_publish.py  test_publish_full.py  test_reviewer.py  test_reviewer_full.py  test_reviewer_v2_7.py  test_rewrite_loop.py  test_writer.py  test_writer_full.py
(+97 files in other folders)
